2011-10-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Minix FS fixes.

	* grub-core/fs/minix.c (GRUB_MINIX_INODE_SIZE): Size is always 32-bit.
	(grub_minix_inode) [!MODE_MINIX2 && !MODE_MINIX3]: Make size 32-bit.
	Rename ctime to mtime. All users updated.
	(grub_minix_get_file_block): Fix types and double indirect computations.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fat.c (grub_fat_label) [MODE_EXFAT]: Set *label to 0
	if no label is found.
	(grub_fat_iterate_dir): Fix file size type.
	(grub_fat_iterate_dir): Likewise.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/reed_solomon.c (gf_invert): Declare as const and
	save some space.
	* include/grub/offsets.h (GRUB_KERNEL_I386_PC_RAW_SIZE): Decrease.
	(GRUB_KERNEL_I386_PC_NO_REED_SOLOMON_PART): Likewise.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/import_gcry.py: Automatically fix camellia.c and camellia.h.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/import_gcry.py: Accept space between # and include.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/setjmp.S [__ia64__]: Include ./ia64/longjmp.S.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	Fine grainely disable warnings on lexer. Remove Wno-error on it.

	* grub-core/Makefile.core.def (normal): Remove -Wno-error.
	* grub-core/script/lexer.c: Declare yytext_ptr to avoid having
	yylex_strncpy.
	* grub-core/script/yylex.l: Add fine-grained #pragma.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/posix_wrap/string.h (memcpy) [GRUB_UTIL]:
	New inline function.
	* grub-core/lib/libgcrypt_wrap/cipher_wrap.h (memcpy) [GRUB_UTIL]:
	Likewise.
	(memset) [GRUB_UTIL]: Likewise.
	(memcmp) [GRUB_UTIL]: Likewise.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/misc.h (grub_memcpy): Declare grub_memcpy with static
	inline function rather than a define.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>
